# bazel-playground

./: .bazelrc  .eslintrc.js  .gitignore  BUILD.bazel  WORKSPACE  jest.config.js  main.yml  package.json  tsconfig.json
.github/workflows/: ci.yml  codeql-analysis.yml
tools/: BUILD.bazel  bazel_deps.bzl  rules_proto_config.yaml
tools/node/: index.bzl  jest.bzl  nest.bzl  ts_project.bzl
tools/scala/: BUILD.bazel  akka.bzl  dependencies.bzl  phase_scalafmt_test.bzl  proto.bzl  scalapb.bzl
