# Add rules here to build your software
# See https://docs.bazel.build/versions/main/build-ref.html#BUILD_files
load("@bazel_gazelle//:def.bzl", "gazelle_binary")
load("@build_stack_rules_proto//rules:proto_gazelle.bzl", "DEFAULT_LANGUAGES", "proto_gazelle")

exports_files([
    ".eslintignore",
    ".eslintrc.js",
    ".nvmrc",
    "package.json",
    "tsconfig.json",
    "yarn.lock",
])

# "@bazel_gazelle//language/go",
# "@bazel_gazelle//language/proto",
# # must be after the proto extension (order matters)
# "@build_stack_rules_proto//language/protobuf",

gazelle_binary(
    name = "gazelle-protobuf",
    languages = DEFAULT_LANGUAGES,
)

proto_gazelle(
    name = "gazelle",
    cfgs = [
        "//tools:rules_proto_config.yaml",
    ],
    gazelle = ":gazelle-protobuf",
)
